<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.corelib.informational.InformationView
            android:id="@+id/lunoApiCredentialsInformationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/luno_api"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.example.corelib.buttons.CustomInputView
            android:id="@+id/keyIdCustomInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/luno_api_key_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lunoApiCredentialsInformationView"
            />

        <com.example.corelib.buttons.CustomInputView
            android:id="@+id/secretKeyCustomInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/luno_api_secret_key"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyIdCustomInputView"
            />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/Save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secretKeyCustomInputView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>